--- a/iPortfolio/css/style.css
+++ b/iPortfolio/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/images/Dp-fix.jfif") top center;
+  background: url("../../images/Dp-fix.jfif") top center;
   background-size:cover;
   
 }
